Finished CRUD for vehicle. Rounded out a simple format for permissions
